# data_lake

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.airflow  Makefile  README.md  SECURITY.md  airflow.env  airflow.env.example  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
dags/: breweries_pipeline.py  bronze_silver_brasileirao_processing.py  bronze_silver_breweries_processing.py  bronze_silver_processing.py  callbacks.py  gold_dbt_breweries_processing.py  gold_dbt_processing.py  iceberg_maintenance.py  staging_brasileirao_ingestion.py  staging_breweries_ingestion.py  staging_ingestion.py
dags/scripts/: breweries_fetch_and_upload_to_bronze.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: surrogate_key.sql
dbt_project/seeds/: brewery_type_mapping.csv  schema.yml
dbt_project/snapshots/: schema.yml  snap_breweries.sql
docker/: Dockerfile.airflow  Dockerfile.spark
docker/airflow/: generate_auth_file.py
docker/dremio/: setup_sources.sh
jobs/python/: aggregate_breweries.py  breweries_bronze_to_silver.py
plugins/: create_spark_connection.py
quality/checks/: bronze_brasileirao.yml  bronze_breweries.yml  silver_breweries.yml
scripts/: validate_secrets.py
src/bronze/: fetch_breweries.py  ingest_brasileirao.py  ingest_breweries.py
src/config/: settings.py
src/gold/: __init__.py  aggregate_breweries.py
src/maintenance/: iceberg_maintenance.py
src/silver/: stadium_enrichment.py  transform_brasileirao.py  (+1 more)
tests/: conftest.py
(+37 files in other folders)
