[project]
name = "data-lake"
version = "2.0.0"
description = "Professional data lakehouse pipeline using Airflow, PySpark, Apache Iceberg, and Nessie"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Gustavo La Torre" }]

dependencies = [
    "pyspark==4.0.0",
    "pydantic-settings>=2.0",
    "minio>=7.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "chispa>=0.10",
    "responses>=0.25",
    "ruff>=0.4",
]
airflow = [
    "apache-airflow==3.2.1",
    "apache-airflow-providers-apache-spark>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 85
